cleanup ontology plugin

--- a/src/plugins/ebi-ols/admin/src/translations/de.json
+++ b/src/plugins/ebi-ols/admin/src/translations/de.json
@@ -1,4 +1,4 @@
 {
-    "country-select.label": "Land",
-    "country-select.description": "Eine Auswahl aller Länder"
+    "ontology-term-select.label": "Land",
+    "ontology-term-select.description": "Eine Auswahl aller Länder"
 }
